// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepIndicator > should limit active index to max number of steps 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="mx-auto mb-2 inline-block font-semibold text-theme-secondary-text sm:hidden"
    >
      3
    </span>
    <ul
      class="flex space-x-3"
    >
      <li
        class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-warning-300"
      />
      <li
        class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-warning-300"
      />
      <li
        class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-warning-300"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should not render with an empty steps array 1`] = `<DocumentFragment />`;

exports[`StepIndicator > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="mx-auto mb-2 inline-block font-semibold text-theme-secondary-text sm:hidden"
    >
      1
    </span>
    <ul
      class="flex space-x-3"
    >
      <li
        class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-warning-300"
      />
      <li
        class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
      />
      <li
        class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should render witth active index defined 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="mx-auto mb-2 inline-block font-semibold text-theme-secondary-text sm:hidden"
    >
      2
    </span>
    <ul
      class="flex space-x-3"
    >
      <li
        class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-warning-300"
      />
      <li
        class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-warning-300"
      />
      <li
        class="h-0.5 flex-1 rounded-lg transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
      />
    </ul>
  </div>
</DocumentFragment>
`;
